<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ssid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid_label" />

        <TextView
            android:id="@+id/ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_value"
            android:textAppearance="@style/TextAppearance.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bssid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bssid_label" />

        <TextView
            android:id="@+id/bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_value"
            android:textAppearance="@style/TextAppearance.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ipAddress_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipAddress_label" />

        <TextView
            android:id="@+id/ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_value"
            android:textAppearance="@style/TextAppearance.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/macAddress_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macAddress_label" />

        <TextView
            android:id="@+id/macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_value"
            android:textAppearance="@style/TextAppearance.Small" />
    </LinearLayout>
</LinearLayout>